--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.6",
-    "webpack-closure-compiler": "^2.1.5"
+    "webpack": "^3.5.6"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.7.1"
