--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-flex-carousel": "^1.0.1",
     "react-redux": "^5.0.6",
     "react-responsive-carousel": "^3.1.25",
+    "react-select": "^1.0.0-rc.10",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
     "style-loader": "^0.18.2",
